# sample-oapi-with-bazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
.github/workflows/: sample.yaml
sample-app/: BUILD.bazel  go.mod  go.sum
sample-app/client/: BUILD.bazel  elm.json  embed.go  index.html
sample-app/client/src/: Main.elm
sample-app/cmd/: BUILD.bazel  main.go
sample-app/server/: BUILD.bazel  api.gen.go  api.yaml  server.go
