load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/matsubara0507/sample-oapi-with-bazel/sample-app/cmd",
    visibility = ["//visibility:private"],
    deps = ["//sample-app/server"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
